Fix textbox padding overlapping tooltips This problem was seen on firefox.

--- a/google-messages-kbd-shortcuts.user.css
+++ b/google-messages-kbd-shortcuts.user.css
@@ -2,7 +2,7 @@
 @name           Keyboard shortcut tooltips for messages.google.com
 @namespace      github.com/acropup/acropup-UserStyle-CSS-Scripts
 @homepageURL    https://github.com/acropup/acropup-UserStyle-CSS-Scripts
-@version        1.1.0
+@version        1.1.1
 @description    Within Google Messages for web (messages.google.com), display the most useful keyboard shortcuts next to their buttons.
 @author         Shane Burgess
 ==/UserStyle== */
@@ -18,6 +18,11 @@
     body.dark-mode {
        --kbd-tooltip-bg-color: #555558;
        --kbd-tooltip-color: #bbbbc0;
+    }
+    /* Use margin instead of padding so background colour doesn't overlap tooltips */
+    mws-autosize-textarea.input textarea.input {
+        padding: 0;
+        margin: 6px 0;
     }
     
     /* General formatting for all tooltips */
